# ArUcoBasedLanding

./: .gitignore  CMakeLists.txt  Makefile  README.md  RIGHTBLACKBOX.xml  VID5.xml  arucoDetect.cpp  calibrate  calibration  camera_calibration.cpp  in_VID5.xml  markerDetect  out_camera_data.xml  paths.cmake
